demo/Kubernetes/istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: hands-on
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP

#   - hosts:
#     - '*'
#     port:
#       name: https
#       number: 443
#       protocol: HTTPS
#     tls:
#       mode: SIMPLE
#       privateKey: /etc/istio/ingressgateway-certs/tls.key
#       serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
# 
#   - hosts: # For TCP routing this fields seems to be ignored, but it is matched
#     - '*'  # with the VirtualService, I use * since it will match anything.
#     port:
#       name: mysql
#       number: 3306
#       protocol: TCP

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice
  namespace: hands-on
spec:
  gateways:
    - hands-on/gateway
  hosts:
    - "*"
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: product-composite.hands-on.svc.cluster.local
          port:
            number: 8080
